[UI][SPACING] Correct Ui spacing in major elements to show more info on screen - Convert paddings / margins to ems - Reduce input / tabdle cell padding to show more cndensed data

--- a/src/main/webapp/css/core/btn.css
+++ b/src/main/webapp/css/core/btn.css
@@ -19,7 +19,7 @@ button:focus {
 /* Bootstrap button overrides */
 .btn {
     padding: 0.5em 1.5em;
-    margin: 5px;
+    margin: 0.25em;
     border: none;
 }
 
