--- a/src/main/webapp/css/core/imagebutton.css
+++ b/src/main/webapp/css/core/imagebutton.css
@@ -19,8 +19,8 @@
 }
 
 .ib-small {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
 }
 
 /* Bin icon image button */
