--- a/src/main/webapp/css/core/input.css
+++ b/src/main/webapp/css/core/input.css
@@ -2,8 +2,8 @@
 
 /* Input related styles */
 input {
-    margin: 5px 10px;
-    padding: 5px 10px;
+    margin: 0.25em;
+    padding: 0.25em;
 }
 
 input:focus {
@@ -25,8 +25,8 @@ input[type=number]::-webkit-outer-spin-button {
 .input-underlined {
     border-width: 0px 0px 1px 0px;
     border-color: #aaaaaa;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 0.25em;
+    border-bottom-right-radius: 0.25em;
     box-shadow: none;
     text-align: left;
     background: transparent;
