--- a/src/main/webapp/css/dashboard/content.css
+++ b/src/main/webapp/css/dashboard/content.css
@@ -1,18 +1,11 @@
 
 .content-toolbar {
     background-color: #eeeeee;
-    border-radius: 5px;
-    padding: 10px;
+    border-radius: 0.25em;
+    padding: 0.5em;
 }
 
 .content-data {
-    margin-top: 10px;
+    margin-top: 0.25em;
     overflow: auto;
-}
-
-.content-list-item {
-    background-color: #efefef;
-    border-radius: 5px;
-    margin-top: 5px;
-    padding: 10px;
 }
